# MarketSignal

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CODEX-DOCS-REVIEW.md  DESIGN_SYSTEM_SEED.md  README.md  claude-code-fixes.md  package-lock.json  package.json  requirements.md  vitest.config.ts
.metis/: BUILD.md  CONTRADICTIONS.md  CURRENT.md  INDEX.md  QUESTIONS.md  RESOLVED.md  SYNTHESIS.md  config.yaml
docs/: NOTES-FROM-RESTRUCTURING.md  README.md  agents.md  analyst-skills.md  configuration.md  cost-control.md  data-portability.md  data-sources.md  export.md  interface.md  job-execution.md  local-model-operations.md  local-models.md  overview.md  portfolio-analysis.md  portfolio-workflow.md  report-structure.md  report-workflow.md  requirements.md  research-behavior.md  research-documents.md  run-tracking.md  scheduled-jobs.md  scheduling.md  schwab-integration.md  storage.md  thesis-continuity.md  trade-opportunities-workflow.md  trade-opportunities.md  ui.md  web-research.md  weekly-report-workflow.md
docs/agents/: analyst-skills.md  architecture.md  main-agent-workflow.md  models.md  subagents.md
docs/reports/: export.md  format.md  standard-structure.md  thesis-continuity.md  weekly-review.md
legacy_docs/: DESIGN_SYSTEM_SEED.md  NOTES-FROM-RESTRUCTURING.md  design-redesign-brief.md
logic-flow-docs/: portfolio-analysis-logic-flow.md  trade-opportunities-logic-flow.md
market-signal-design-system/: .thumbnail  README.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  colors_and_type.css
market-signal-design-system/components/: DirectionalValue.d.ts  DirectionalValue.jsx  GradeChip.d.ts  GradeChip.jsx  KeyFigureStrip.d.ts  KeyFigureStrip.jsx  directional-value.html  grade-chip.html  key-figure-strip.html
market-signal-design-system/preview/: _card.css  analytical-controls.html  analytical-datagrid.html  analytical-directional.html  analytical-grade.html  analytical-holding-card.html  analytical-keyfigure.html  analytical-palette.html  brand-icons.html  brand-voice-yes.html  colors-hairlines.html  components-inputs.html  components-ornament.html  components-warning.html  confirmation-dialog.html  spacing-motion.html  spacing-radii.html  spacing-scale.html  type-sans.html  type-tracking.html
market-signal-design-system/project/: README.md  SKILL.md  colors_and_type.css
market-signal-design-system/project/fonts/: README.md
market-signal-design-system/project/preview/: brand-anti-patterns.html  brand-voice-no.html  brand-wordmark.html  colors-accent.html  colors-dark.html  colors-direction.html  colors-ink.html  colors-paper.html  components-buttons.html  components-card.html  components-sidebar-row.html  components-status.html  components-table.html  spacing-elevation.html  spacing-rhythm.html  type-measure.html  type-numerals.html  type-scale.html  type-serif.html
market-signal-design-system/ui_kits/market_signal_desktop/: Analytical.jsx  LatestReport.jsx  Portfolio.jsx  README.md  (+8 more)
src/: App.vue  format.ts  main.ts  renderChart.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  analyst_agent.rs  baseline_delta.rs  bls.rs  cadence.rs  config.rs  connection_test.rs  cot.rs  data_sources.rs  demo.rs  document_parser.rs  embedding.rs  fmp.rs  fmp_news.rs  fred.rs  gdelt.rs  headline_filter.rs  http_retry.rs  jobs.rs  lib.rs  local_model.rs  loopback_https.rs  main.rs  market_clock.rs  model_agent.rs  news.rs  pipeline.rs  portability.rs  progress.rs  research.rs  research_executor.rs  research_packet.rs  research_router.rs  schedule.rs  schwab.rs  schwab_live.rs  schwab_oauth.rs  schwab_secrets.rs  sec.rs  settings.rs  (+6 more)
src-tauri/src/portfolio/: diff.rs  dossier.rs  engine.rs  fund.rs  job.rs  mod.rs  pipeline.rs  store.rs
src-tauri/tests/: export.rs  generate_report.rs  job_lifecycle.rs  recent_reports.rs
src/components/: ConfirmDialog.vue  ConnectionTestRow.vue  Icon.vue  JobStatusPanel.vue  JobTrackerView.vue  LatestReportView.vue  PersistentWarningArea.vue  PortfolioView.vue  RecentReportsSidebar.vue  ResearchDocuments.vue  ResearchInbox.vue  Settings.vue
tests/: renderChart.test.ts
tests/components/: App.spec.ts  ConfirmDialog.spec.ts  JobStatusPanel.spec.ts  JobTrackerView.spec.ts  LatestReportView.spec.ts  PersistentWarningArea.spec.ts  PortfolioView.spec.ts  RecentReportsSidebar.spec.ts  ResearchDocuments.spec.ts  Settings.spec.ts
tests/helpers/: freeze.ts  tauri.ts
(+10 files in other folders)
