[package]
name = "market-signal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "market_signal_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Dev-only demo mode (see src/demo.rs). NOT in `default`, so `tauri build`
# (default features only) compiles it out entirely — no demo code or mock data
# reaches the shipped binary. Enable for a cost-free GUI run: `tauri dev
# --features demo-run` with MARKET_SIGNAL_DEMO=1.
demo-run = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
uuid = { version = "1.23.2", features = ["v4"] }
chrono = "0.4.44"
chrono-tz = "0.10"
anyhow = "1.0.102"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
pdf-extract = "0.10"
html2text = "0.17"

[dev-dependencies]
tempfile = "3.27.0"

