[package]
name = "market-signal"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "market_signal_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Dev-only demo mode (see src/demo.rs). NOT in `default`, so `tauri build`
# (default features only) compiles it out entirely — no demo code or mock data
# reaches the shipped binary. Enable for a cost-free GUI run: `tauri dev
# --features demo-run` with MARKET_SIGNAL_DEMO=1.
demo-run = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
uuid = { version = "1.23.2", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1.0.102"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
pdf-extract = "0.10"
html2text = "0.17"
# Default features enable the `v1` compat API (`keyring::Entry`) and, on macOS,
# the native Keychain store (`apple-native-keyring-store/keychain`). The Schwab
# app secret + OAuth tokens live here, not in the SQLite settings store used for
# less-sensitive keys (docs/schwab-integration.md §Token lifecycle).
keyring = "4.1.2"
rcgen = "0.14.8"
# The OAuth loopback capture's TLS server (`loopback_https`). `default-features = false`
# keeps the aws-lc-rs provider out (it would add a large C/asm build the tree doesn't
# otherwise pay for); `ring` matches the provider reqwest's rustls-tls already resolves
# to, so this adds no new native dependency and `ServerConfig::builder()` resolves the
# process provider unambiguously. Replaces tiny_http, whose `ssl-rustls` hard-pinned the
# EOL rustls 0.20 / ring 0.16 stack.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Data-portability archive (`docs/data-portability.md`): the structured zip
# container plus its optional passphrase encryption (AES-256-GCM over an
# Argon2id-derived key), manifest checksums, and the NDJSON embedding encoding.
# `zip` is trimmed to deflate only; aes-gcm/argon2 are the pure-Rust RustCrypto
# pair (the rustls `ring` stack above carries no password KDF).
zip = { version = "2", default-features = false, features = ["deflate"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.27.0"

